--- a/app/components/ui/main.css
+++ b/app/components/ui/main.css
@@ -355,16 +355,21 @@ height: auto;
   cursor: pointer;
 }
 
-input[type=checkbox].glyphicon:before {
+input[type=checkbox].glyphicon:before, input[type=checkbox].fa:before {
   visibility: visible;
   opacity:0.5;
 }
-input[type=checkbox].glyphicon.glyphicon-eye-close:checked:before {
-  content: "\e105";
+input[type=checkbox].glyphicon:checked:before, input[type=checkbox].fa:checked:before {
   opacity:1;
 }
-input[type=checkbox].glyphicon{
-  visibility: hidden;        
+input[type=checkbox].glyphicon,input[type=checkbox].fa{
+  visibility: hidden; 
+}
+input[type=checkbox].glyphicon-eye-close:checked:before {
+  content: "\e105";
+}
+input[type=checkbox].fa-unlock:checked:before {
+  content: "\f023";
 }
 
 .dropdown, .modal-dialog {
@@ -377,4 +382,23 @@ padding: 10px;
 
 .modal-content .nav-tabs > li {
 margin: 10px 0px -1px 10px;
+}
+
+.ngHeaderButton {
+  -moz-border-radius: 10%;
+  -webkit-border-radius: 10%;
+  border-radius: 10%;
+  width: auto;
+  height: auto;
+  top: 2px;
+  text-size: 10px;
+  padding: 3px 5px;
+}
+
+.ngRow .locked {
+  color: #aaa;
+}
+
+.select2-container {
+  width: 100%;
 }
